# IntervAI

./: .env.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  railway.toml  render.yaml
backend/: .coverage  .env.example  .env.production.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260519_0001_initial_schema.py  20260519_0002_add_clerk_auth.py  20260519_0003_resume_upload_metadata.py  20260521_0004_resume_extraction.py  20260522_0005_interview_config.py  20260522_0006_question_metadata.py  20260524_0007_interview_session_progress.py  20260527_0008_background_jobs.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/ai/: __init__.py
backend/app/analytics/: __init__.py  weak_area_detector.py  weak_area_types.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py  sync_database.py
backend/app/models/: __init__.py  answer_evaluation.py  background_job.py  enums.py  interview_answer.py  interview_question.py  interview_session.py  pg_enum.py  resume.py  resume_analysis.py  (+4 more)
backend/docs/: database.md
backend/scripts/: migrate.ps1
backend/tests/: conftest.py  test_answer_rubric.py  test_api_auth.py  test_api_health.py  test_api_interviews.py  test_api_resumes.py  test_background_jobs.py  test_config.py  test_file_validation.py  test_orchestration.py  test_resume_extraction.py  test_security.py  test_speech_analyzer.py  test_weak_area.py
(+386 files in other folders)
